tooling/nargo_cli/tests/snapshots/execution_success/simple_bitwise/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(a: bool, b: bool, c: u8, d: u8) -> pub u8 {
    let i: bool = a & b;
    let j: bool = a ^ b;
    let k: bool = a | b;
    let x: u8 = c & d;
    let y: u8 = c ^ d;
    let z: u8 = c | d;
    (((((i as u8) + (j as u8)) + (k as u8)) + x) + y) + z
}
